# KeyNote

./: .gitignore  PLAN.md  README.md  autopaste.py  cli.py  export_service.py  hotkeys.py  instruction.md  keynote.db  keynote_ptt.py  migrations.py  modes_service.py  notes_service.py  pyproject.toml  requirements.txt  settings_service.py  storage.py
prompts/: autocorrect.md  clean_transcript.md  email.txt  mail.md  none.txt  notes.txt  pl_requirements.txt  requirements.md  requirements.txt  slack.md  slack.txt  summarize.md  transcript.md  translate.md  translate.txt
scripts/: launch_server_e4b.ps1  launch_server_e4b.sh
tui/: app.py
tui/screens/: editor.py  export.py  main.py
tui/widgets/: mode_bar.py  note_detail.py  note_list.py
