[project]
name = "keynote"
version = "0.1.0"
description = "KeyNote: A voice-controlled note-taking system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.3",
    "httpx>=0.27.0",
    "keyboard>=0.13.5",
    "numpy>=1.26.0",
    "pyperclip>=1.8.2",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "textual>=0.47.0",
]

[project.scripts]
keynote = "cli:app"

[tool.hatch.build]
include = [
  "*.py",
  "tui/",
  "prompts/",
  "scripts/"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
